--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
   <script src="cordova.js"></script>
   <!-- <script src="//maps.google.com/maps/api/js?key=AIzaSyBleMWqX_zL6aYiguX7rfyCWVmx2LRDYH0&libraries=geometry,places"></script> -->
 
-   <!-- <script>
+   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
   </script>
--->
   <script src="assets/js/jquery.min.js"></script>
   <link href="build/main.css" rel="stylesheet">
   <link href="assets/fonts/vspfonts.css" rel="stylesheet">
