--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="FAOZI">
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#f79c34ea">
+  <meta name="theme-color" content="#f9690e">
   <meta name="aplication-name" content="Tumbas.in">
   <meta name="apple-mobile-web-app-capble" content="yes">
   <meta name="apple-touch-icon-precomposed" href="assets/icon/favicon.ico">
@@ -20,13 +20,14 @@
   <script src="cordova.js"></script>
   <!-- <script src="//maps.google.com/maps/api/js?key=AIzaSyBleMWqX_zL6aYiguX7rfyCWVmx2LRDYH0&libraries=geometry,places"></script> -->
 
-   <script>
+  <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
   </script>
+  
   <script src="assets/js/jquery.min.js"></script>
   <link href="build/main.css" rel="stylesheet">
   <link href="assets/fonts/vspfonts.css" rel="stylesheet">
